Fixed sonarcloud issues and updated UserFeignClient